--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <!--[if lt IE 9]-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    <script src="masonry.pkgd.min.js"></script>
     <!--[endif]-->
   </head>
   <body>
   <div class="wrapper">
-    <div data-wall="attendify"></div>
+    <div class="container">
+      <div data-wall="attendify"></div>
+    </div>
   </div>
 
     <script type="text/javascript" src="http://dkldiv.attendify.io/api.min.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
-
   </body>
 </html>
